[WIP] view prizes progress fixed overflow scroll

--- a/arability/app/assets/stylesheets/games.css.scss
+++ b/arability/app/assets/stylesheets/games.css.scss
@@ -80,3 +80,8 @@
   border-bottom: solid;
   border-width: 1px;
 }
+
+.award-zone {
+  overflow-y: scroll;
+  height:100%;
+}
